Updated icon reference
For consistency, the cancel button icon for the new user form now uses fa-ban.

--- a/admin/create-user.html
+++ b/admin/create-user.html
@@ -114,8 +114,8 @@ title: EHC Hub
         </div>
 
         <div class="d-flex justify-content-lg-end mt-2 mt-lg-0">
-          <a class="btn btn-neutral-50 me-2" href="/admin/admin-users"><i class="fal fa-times-circle me-2"></i>Cancel</a>
-          <a class="btn btn-primary disabled" href="/admin/admin-users"><i class="fal fa-paper-plane text-white me-2"></i>Confirm</a>
+          <a class="btn btn-neutral-50 me-2" href="/admin/admin-users"><i class="fal fa-ban me-2"></i>Cancel</a>
+          <a class="btn btn-primary" href="/admin/admin-users"><i class="fal fa-paper-plane text-white me-2"></i>Confirm</a>
         </div>
 
       </div>
