Updated user profile help text

--- a/admin/create-user.html
+++ b/admin/create-user.html
@@ -23,8 +23,8 @@ title: EHC Hub
               <div class="col">
                 <div class="mb-3">
                   <label for="exampleInputText1" class="form-label"><span class="text-danger me-1">*</span>Name</label>
-                  <input type="text" class="form-control" id="exampleInputText1" aria-describedby="textHelp">
-                  <div id="textHelp" class="form-text">This is how their name will appear to other people.</div>
+                  <input type="text" class="form-control" id="exampleInputText1" aria-describedby="nameHelp">
+                  <div id="nameHelp" class="form-text">This is how it will appear to other people.</div>
                 </div>
               </div>
             </div>
@@ -33,13 +33,15 @@ title: EHC Hub
               <div class="col-md-6">
                 <div class="mb-3">
                   <label for="exampleInputEmail1" class="form-label"><span class="text-danger me-1">*</span>Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1">
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <div id="emailHelp" class="form-text">This is used for account login and to receive email notifications.</div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="mb-3">
                   <label for="exampleInputEmail2" class="form-label"><span class="text-danger me-1">*</span>Confirm email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail2">
+                  <input type="email" class="form-control" id="exampleInputEmail2" aria-describedby="confirmEmailHelp">
+                  <div id="confirmEmailHelp" class="form-text">This is necessary to avoid mistakes when updating the email address.</div>
                 </div>
               </div>
             </div>
