--- a/user-profile/index.html
+++ b/user-profile/index.html
@@ -23,15 +23,15 @@ title: EHC Hub
               <div class="col-md-6">
                 <div class="mb-3">
                   <label for="exampleInputText1" class="form-label">Name</label>
-                  <input type="text" class="form-control" id="exampleInputText1" aria-describedby="textHelp">
-                  <div id="textHelp" class="form-text">This is how your name will appear to other people.</div>
+                  <input type="text" class="form-control" id="exampleInputText1" aria-describedby="nameHelp">
+                  <div id="nameHelp" class="form-text">This is how it will appear to other people.</div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="mb-3">
                   <label for="exampleInputRole1" class="form-label">Role</label>
-                  <input class="form-control" id="exampleInputRole1" type="text" value="Co-ordinator" aria-label="Role" disabled readonly aria-describedby="textHelp2">
-                  <div id="textHelp2" class="form-text">Your level of access in the EHC Hub and cannot be changed.</div>
+                  <input class="form-control" id="exampleInputRole1" type="text" value="Co-ordinator" aria-label="Role" disabled readonly aria-describedby="roleHelp">
+                  <div id="roleHelp" class="form-text">The type of access in the EHC Hub and cannot be changed.</div>
                 </div>
               </div>
             </div>
@@ -41,14 +41,14 @@ title: EHC Hub
                 <div class="mb-3">
                   <label for="exampleInputEmail1" class="form-label">Email address</label>
                   <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                  <div id="emailHelp" class="form-text">This is used to login to your account and receive email notifications.</div>
+                  <div id="emailHelp" class="form-text">This is used for account login and to receive email notifications.</div>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="mb-3">
                   <label for="exampleInputEmail2" class="form-label">Confirm email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp2">
-                  <div id="emailHelp2" class="form-text">This is necessary to avoid mistakes when updating your email address.</div>
+                  <input type="email" class="form-control" id="exampleInputEmail2" aria-describedby="confirmEmailHelp">
+                  <div id="confirmEmailHelp" class="form-text">This is necessary to avoid mistakes when updating the email address.</div>
                 </div>
               </div>
             </div>
@@ -58,7 +58,7 @@ title: EHC Hub
                 <div class="mb-3">
                   <label for="exampleInputTextJob1" class="form-label">Job title</label>
                   <input type="text" class="form-control" id="exampleInputTextJob1" aria-describedby="jobHelp">
-                  <div id="jobHelp" class="form-text">This can provide the family context to your involvement with a child/young person.</div>
+                  <div id="jobHelp" class="form-text">This can provide context to others in the EHC Hub.</div>
                 </div>
               </div>
             </div>
@@ -149,7 +149,7 @@ title: EHC Hub
         </div>
 
         <div class="d-flex justify-content-lg-end mt-2 mt-lg-0">
-          <a class="btn btn-neutral-50 me-2" href="#"><i class="fal fa-times-circle me-2"></i>Cancel</a>
+          <a class="btn btn-neutral-50 me-2" href="#"><i class="fal fa-ban me-2"></i>Cancel</a>
           <a class="btn btn-primary" href="#"><i class="fal fa-save text-white me-2"></i>Save</a>
         </div>
 
