--- a/user-profile/index.html
+++ b/user-profile/index.html
@@ -103,6 +103,13 @@ title: EHC Hub
               </div>
             </div>
 
+          </div>
+        </div>
+
+        <div class="card mb-5">
+          <div class="card-body">
+            <h5 class="card-title">Two Factor Authentication</h5>
+
             <div class="row">
               <div class="col-md-6">
                 <div class="my-5">
