Updated parent guidance column width for large screens

--- a/admin/admin-parent-guidance.html
+++ b/admin/admin-parent-guidance.html
@@ -34,7 +34,7 @@ title: Parent guidance
 
         <!-- Text areas to configure guidance text -->
         <div class="row">
-          <div class="col-xl-8">
+          <div class="col">
 
             <div class="card mb-5">
               <div class="card-body">
