--- a/admin/admin-users.html
+++ b/admin/admin-users.html
@@ -13,7 +13,7 @@ title: Users
       <div class="col">
 
         <aside class="mb-5">
-          <a href="/admin"><i class="fal fa-arrow-left me-2"></i>Back to Administration</a>
+          <a href="/admin"><i class="fal fa-arrow-circle-left me-2"></i>Back to Administration</a>
         </aside>
 
         <h1>Users</h1>
