Update anon request form

--- a/anon/anon-request.html
+++ b/anon/anon-request.html
@@ -17,14 +17,94 @@ title: Request for assessment
         <p>Before starting, we recommend reading the form on this page and collating all of the relevant information that you have.</p>
         <p>To protect your sensitive information, it's not possible to part complete your request and send it to us at a later time. However, there will be opportunity to add more information and upload documents after we receive your request.</p>
 
-        <h2>Information sharing and data protection statement</h2>
-        <p>...</p>
-        <p>...</p>
-        <p>...</p>
+        <div class="accordion" id="accordionExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                Information sharing and data protection statement
+              </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse">
+              <div class="accordion-body">
+                ...
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                <span class="me-3">1.</span>Details of person requesting an EHC needs assessment
+              </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse">
+              <div class="accordion-body">
+                ...
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                <span class="me-3">2.</span>Child or young person's details
+              </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse">
+              <div class="accordion-body">
+                ...
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                <span class="me-3">3.</span>Child or young person's main contacts (family and involved professionals)
+              </button>
+            </h2>
+            <div id="collapseFour" class="accordion-collapse collapse">
+              <div class="accordion-body">
+                ...
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                <span class="me-3">4.</span>Details of the child or young person's current education setting(s)
+              </button>
+            </h2>
+            <div id="collapseFive" class="accordion-collapse collapse">
+              <div class="accordion-body">
+                ...
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                <span class="me-3">5.</span>Important information about the child or young person
+              </button>
+            </h2>
+            <div id="collapseSix" class="accordion-collapse collapse">
+              <div class="accordion-body">
+                ...
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+                <span class="me-3">6.</span>Views of the child or young person and their parent, carer or guardian
+              </button>
+            </h2>
+            <div id="collapseSeven" class="accordion-collapse collapse">
+              <div class="accordion-body">
+                ...
+              </div>
+            </div>
+          </div>
+        </div>
 
-        <hr>
-
-        <div class="d-flex justify-content-end">
+        <div class="d-flex justify-content-end mt-5">
           <a href="/index" class="btn btn-neutral-50 me-2"><i class="fal fa-times-circle me-2"></i>Cancel</a>
           <a href="/anon/thank-you" class="btn btn-primary"><i class="fal fa-paper-plane me-2 text-white"></i>Send request</a>
         </div>
