--- a/case-view/assessment.html
+++ b/case-view/assessment.html
@@ -54,6 +54,7 @@ title: EHC Hub
            <table class="table table-striped table-hover table-borderless idx-results-table align-middle mt-0">
              <thead>
                <tr>
+                 <th scope="col">#</th>
                  <th scope="col">Name <i class="fal fa-arrow-up idx-table-sort px-1" aria-hidden="true" title="Sort"></i></th>
                  <th scope="col">Job title</th>
                  <th scope="col">Specialism</th>
@@ -66,6 +67,7 @@ title: EHC Hub
              </thead>
              <tbody>
                <tr>
+                 <th scope="row">1</th>
                  <td>Robyn Sayer</td>
                  <td>SENCo</td>
                  <td>Education</td>
@@ -78,6 +80,7 @@ title: EHC Hub
                  </td>
                </tr>
                <tr>
+                 <th scope="row">2</th>
                  <td>Peter Jameson</td>
                  <td>Educational Psychologist</td>
                  <td>Education</td>
@@ -90,6 +93,7 @@ title: EHC Hub
                  </td>
                </tr>
                <tr>
+                 <th scope="row">3</th>
                  <td>Helen Clarkson</td>
                  <td>OT</td>
                  <td>Health</td>
@@ -103,8 +107,9 @@ title: EHC Hub
                  </td>
                </tr>
                <tr>
-                 <td>Kerry Holmes</td>
-                 <td>Social Worker</td>
+                 <th scope="row" rowspan="3" class="align-top">4</th>
+                 <td>Social Care</td>
+                 <td></td>
                  <td>Social Care</td>
                  <td>27/09/2022</td>
                  <td>08/11/2022</td>
@@ -112,6 +117,45 @@ title: EHC Hub
                  <td><span class="badge text-bg-warning w-100">Pending</span></td>
                  <td class="no-wrap">
                    <a href="#" title="Edit user" class="me-3"><i class="fal fa-times-circle me-1"></i>Close</a>
+                 </td>
+               </tr>
+               <tr>
+                 <td>Kerry Holmes</td>
+                 <td>Social Worker</td>
+                 <td>Social Care</td>
+                 <td></td>
+                 <td></td>
+                 <td></td>
+                 <td><span class="badge text-bg-warning w-100">Pending</span></td>
+                 <td class="no-wrap">
+                   <a href="#" title="Edit user" class="me-3"><i class="fal fa-times-circle me-1"></i>Close</a>
+                 </td>
+               </tr>
+               <tr>
+                 <td>Henry Fowler</td>
+                 <td>Social Worker</td>
+                 <td>Social Care</td>
+                 <td></td>
+                 <td></td>
+                 <td></td>
+                 <td><span class="badge text-bg-success w-100">Completed</span></td>
+                 <td class="no-wrap">
+                   <a href="#" title="Edit user" class="me-3"><i class="fal fa-redo me-1"></i>Re-open</a>
+                   <a href="#" title="Edit user" class="me-3"><i class="fal fa-file-alt me-1"></i>Read</a>
+                 </td>
+               </tr>
+               <tr>
+                 <th scope="row">5</th>
+                 <td>Julie Grange</td>
+                 <td>Physio</td>
+                 <td>Health</td>
+                 <td>27/09/2022</td>
+                 <td>08/11/2022</td>
+                 <td>06/11/2022</td>
+                 <td><span class="badge text-bg-success w-100">Completed</span></td>
+                 <td class="no-wrap">
+                   <a href="#" title="Edit user" class="me-3"><i class="fal fa-redo me-1"></i>Re-open</a>
+                   <a href="#" title="Edit user" class="me-3"><i class="fal fa-file-alt me-1"></i>Read</a>
                  </td>
                </tr>
              </tbody>
