--- a/reports/sen2.html
+++ b/reports/sen2.html
@@ -22,17 +22,17 @@ title: Reporting
             <a class="nav-link" href="/reports">Standard exports</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active"  aria-current="page" href="#">SEN2</a>
+            <a class="nav-link active"  aria-current="page" href="/reports/sen2">SEN2</a>
           </li>
         </ul>
+
+        <h4>SEN2 supporting export</h4>
+        <p>An export file in CSV format to support the annual collection of SEN data for the Department for Education (DfE). Create a 'real-time' export of data to download, or download the most recent scheduled snapshot file created on the DfE's published census date.</p>
 
         <div class="card mb-5">
           <div class="card-body">
 
-            <h4 class="card-title">SEN2 supporting export</h4>
-            <p class="card-text">An export file in CSV format to support the annual collection of SEN data for the Department for Education (DfE). Create a 'real-time' export of data to download, or download the most recent scheduled snapshot file created on the DfE's published census date.</p>
-
-            <h5 class="my-5">On-demand export</h5>
+            <h5 class="card-title mb-5">On-demand export</h5>
 
             <a href="/reports/sen2-progress" class="btn btn-neutral-50"><i class="fal fa-file-plus me-2"></i>Create file</a>
 
@@ -64,12 +64,19 @@ title: Reporting
              <p class="text-muted">This table includes 5 of the most recently created on-demand files.</p>
            </div>
 
-           <h5>Scheduled export</h5>
+          </div>
+        </div>
+
+        <div class="card mb-5">
+          <div class="card-body">
+
+          <h5 class="card-title mb-5">Scheduled export</h5>
            <div class="alert alert-info m-0" role="alert">
              <div>
                <i class="fal fa-info-circle me-2"></i>The next snapshot file is scheduled for 18 January 2024 at 22:20 and will overwrite the previous file.
              </div>
            </div>
+
            <div class="table-responsive">
             <table class="table table-hover table-borderless idx-results-table align-middle">
               <thead>
