--- a/onboarding/tfa-app-auth.html
+++ b/onboarding/tfa-app-auth.html
@@ -21,14 +21,12 @@ title: EHC Hub
 				<input type="text" class="form-control" id="codeInput" maxlength="6" placeholder="000000">
 			</div>
 
-			<!-- remember me checkbox 
 			<div class="form-check">
 			  <input class="form-check-input" type="checkbox" value="" id="flexCheckRemember">
 			  <label class="form-check-label" for="flexCheckRemember">
-			    Remember me for 7 days <i class="fal fa-info-circle ms-1" data-bs-toggle="tooltip" data-bs-title="Skip this step for the next 7 days. We recommend this option only if you are using a trusted device which is not shared with any other person."></i>
+			    Remember me for 7 days <i class="fal fa-info-circle ms-1" data-bs-toggle="tooltip" data-bs-title="Tick the box to skip this step for the next 7 days."></i>
 			  </label>
 			</div>
-			-->
 
 			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/work-tray">Continue</a>
 			<p><a href="/">Back to Log in</a></p>
