--- a/onboarding/tfa-choose.html
+++ b/onboarding/tfa-choose.html
@@ -32,14 +32,13 @@ title: EHC Hub
 			  </label>
 			</div>
 
-			<!-- email option
 			<div class="form-check">
 			  <input class="form-check-input" type="radio" name="flexRadioSMS" id="flexRadioEmail">
 			  <label class="form-check-label" for="flexRadioEmail">
 			    <p class="mb-1">Email</p>
 					<p class="text-neutral-500">We'll send your code by email.</p>
 			  </label>
-			</div> -->
+			</div>
 
 			<a role="button" data-bs-toggle="collapse" href="#tfa-info" aria-controls="tfa-info" aria-expanded="false" aria-label="Toggle information">
 	      <span class="visually-hidden">More information</span>
