--- a/onboarding/tfa-email-auth.html
+++ b/onboarding/tfa-email-auth.html
@@ -13,22 +13,12 @@ title: EHC Hub
 			<img src="/assets/images/idox-logo.gif" alt="Edgehill logo" height="90" class="ms-auto d-block mb-2">
 			<h2 class="idx-login-name">EHC Hub</h2>
 			<h3 class="idx-login-descriptor">Edgehill Council</h3>
-			<h4 class="idx-login-heading my-7">Enter characters from your phrase</h4>
-			<p>Enter the <strong>2nd</strong>, <strong>7th</strong> and <strong>10th</strong> characters of your memorable word or phrase.</p>
+			<h4 class="idx-login-heading my-7">Enter your code</h4>
+			<p>Enter the verification code that we've sent to your email address.</p>
 
-			<div class="row">
-				<div class="form col mb-3">
-					<label for="codeInput1" class="visually-hidden" title="Enter your first character"></label>
-					<input type="text" class="form-control" id="codeInput1" maxlength="1" placeholder="">
-				</div>
-				<div class="form col mb-3">
-					<label for="codeInput2" class="visually-hidden" title="Enter your second character"></label>
-					<input type="text" class="form-control" id="codeInput2" maxlength="1" placeholder="">
-				</div>
-				<div class="form col mb-3">
-					<label for="codeInput3" class="visually-hidden" title="Enter your third character"></label>
-					<input type="text" class="form-control" id="codeInput3" maxlength="1" placeholder="">
-				</div>
+			<div class="form mb-3">
+				<label for="codeInput" class="visually-hidden"></label>
+				<input type="text" class="form-control" id="codeInput" maxlength="6" placeholder="000000">
 			</div>
 
 			<div class="form-check">
@@ -39,9 +29,8 @@ title: EHC Hub
 			</div>
 
 			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/work-tray">Continue</a>
-
+			<p><a href="#">Resend log in code</a></p>
 			<p><a href="/">Back to Log in</a></p>
-
 		</main>
 
 	</div>
