--- a/onboarding/tfa-sms-auth.html
+++ b/onboarding/tfa-sms-auth.html
@@ -20,6 +20,14 @@ title: EHC Hub
 				<label for="codeInput" class="visually-hidden"></label>
 				<input type="text" class="form-control" id="codeInput" maxlength="6" placeholder="000000">
 			</div>
+
+			<div class="form-check">
+			  <input class="form-check-input" type="checkbox" value="" id="flexCheckRemember">
+			  <label class="form-check-label" for="flexCheckRemember">
+			    Remember me for 7 days <i class="fal fa-info-circle ms-1" data-bs-toggle="tooltip" data-bs-title="Tick the box to skip this step for the next 7 days."></i>
+			  </label>
+			</div>
+
 			<a class="btn btn-primary idx-login-btn mt-3 mb-6" href="/work-tray">Continue</a>
 			<p><a href="#">Resend log in code</a></p>
 			<p><a href="/">Back to Log in</a></p>
