--- a/onboarding/tfa-choose.html
+++ b/onboarding/tfa-choose.html
@@ -36,7 +36,7 @@ title: EHC Hub
 			  <input class="form-check-input" type="radio" name="flexRadioSMS" id="flexRadioEmail">
 			  <label class="form-check-label" for="flexRadioEmail">
 			    <p class="mb-1">Email</p>
-					<p class="text-neutral-500">We'll send your code by email.</p>
+					<p class="text-neutral-500">We'll send your code to your account email address.</p>
 			  </label>
 			</div>
 
