Update TFS skip tooltips

--- a/onboarding/tfa-app-auth.html
+++ b/onboarding/tfa-app-auth.html
@@ -24,7 +24,7 @@ title: EHC Hub
 			<div class="form-check">
 			  <input class="form-check-input" type="checkbox" value="" id="flexCheckRemember">
 			  <label class="form-check-label" for="flexCheckRemember">
-			    Remember me for 7 days <i class="fal fa-info-circle ms-1" data-bs-toggle="tooltip" data-bs-title="Tick the box to skip this step for the next 7 days."></i>
+			    Remember me for 7 days <i class="fal fa-info-circle ms-1" data-bs-toggle="tooltip" data-bs-title="This step will be temporarily skipped. We recommend using only if you trust the device and there are other steps in place to protect others from accessing your account details."></i>
 			  </label>
 			</div>
 
