Add footer and revert option.

--- a/admin/index.html
+++ b/admin/index.html
@@ -64,6 +64,7 @@ title: Administration
                   <li class="mb-1"><a href="#">LA names</a></li>
                   <li class="mb-1"><a href="#">Meeting types</a></li>
                   <li class="mb-1"><a href="#">Primary needs types</a></li>
+                  <li class="mb-1"><a href="#">Revert case reasons</a></li>
                   <li class="mb-1"><a href="#">Setting types</a></li>
                   <li class="mb-1"><a href="#">System settings</a></li>
                   <li class="mb-1"><a href="#">Support audit</a></li>
