--- a/case-view/timeline.html
+++ b/case-view/timeline.html
@@ -40,6 +40,27 @@ title: EHC Hub
                   <span>12 Jul 2023 11:49</span>
                 </li>
                 <li class="list-group-item">
+                  <p>Reverted Ellery's case to the Plan Decision stage.</p>
+                  <p>
+                    <strong>Reason:</strong> Correct a mistake.<br>
+                    <strong>Supporting comment:</strong> Incorrect decision published and family informed.
+                  </p>
+                </li>
+              </ul>
+            </div>
+          </li>
+
+          <li>
+            <span class="fa-li"><i class="fa fa-circle"></i></span>
+            <div class="card">
+
+              <ul class="list-group list-group-flush">
+
+                <li class="list-group-item timeline-header d-flex justify-content-between">
+                  <span>Max Schneider</span>
+                  <span>12 Jul 2023 11:49</span>
+                </li>
+                <li class="list-group-item">
                   Updated Ellery's details.
                 </li>
               </ul>
